[package]
name = "metrics-exporter-statsd"
version = "0.7.0"
authors = ["Manish Bellani <mbellani@github.com>"]
edition = "2021"
license = "MIT"
description = "metrics-rs exporter that supports reporting metrics to StatsD"
readme = "README.md"
repository = "https://github.com/github/metrics-exporter-statsd"
homepage = "https://github.com/github/metrics-exporter-statsd"
keywords = ["metrics", "statsd"]
categories = ["observability", "operations"]

[dependencies]
cadence = "1.0"
metrics = "0.22"
thiserror = "1.0"
