[package]
name = "metrics-exporter-statsd"
version = "0.9.0"
authors = ["Manish Bellani <mbellani@github.com>"]
edition = "2021"
license = "MIT"
description = "metrics-rs exporter that supports reporting metrics to StatsD"
readme = "README.md"
repository = "https://github.com/github/metrics-exporter-statsd"
homepage = "https://github.com/github/metrics-exporter-statsd"
keywords = ["metrics", "statsd"]
categories = ["development-tools"]

[dependencies]
metrics = "0.24"
cadence = "1.5"
thiserror = "2.0"
